After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789656 - When I sign in in Preferences > Sync, the browser Segfaults.
When I sign in in Preferences > Sync, the browser Segfaults.
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Sync
3.26.x
Other Linux
: High critical
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-30 15:51 UTC by Dan Jacobson
Modified: 2017-11-06 14:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
trace (22.39 KB, text/plain)
2017-11-06 03:37 UTC, Dan Jacobson
  Details
sync-crypto: Use PRIu64 macro to print unsigned longs (1.23 KB, patch)
2017-11-06 07:59 UTC, Gabriel Ivașcu
committed Details | Review

Description Dan Jacobson 2017-10-30 15:51:51 UTC
When I sign in in Preferences > Sync, the browser Segfaults.

After I enter my password it momentarily says signin completed, and the
poof... the browser crashes.

Returning to Preferences > Sync, it then says "Sign in
to continue to Firefox Sync" again.
Comment 1 Michael Catanzaro 2017-10-30 16:12:43 UTC
Thanks for taking the time to report this.
Without a stack trace from the crash it's very hard to determine what caused it.
Can you get us a stack trace? Please see https://wiki.gnome.org/Community/GettingInTouch/Bugzilla/GettingTraces for more information on how to do so. When pasting a stack trace in this bug report, please reset the status of this bug report from NEEDINFO to its previous status. Thanks in advance!
Comment 2 Dan Jacobson 2017-11-06 03:37:49 UTC
Created attachment 363032 [details]
trace
Comment 3 Dan Jacobson 2017-11-06 03:38:55 UTC
Happens every time on my i386 computer. Not on my amd64 computers.
Comment 4 Gabriel Ivașcu 2017-11-06 07:38:20 UTC
From the stack trace:

Thread 1 (Thread 0xaf9de980 (LWP 10398))

  • #0 ??
    from /lib/i386-linux-gnu/libc.so.6
  • #1 vfprintf
    from /lib/i386-linux-gnu/libc.so.6
  • #2 __vasprintf_chk
    from /lib/i386-linux-gnu/libc.so.6
  • #3 vasprintf
    at /usr/include/i386-linux-gnu/bits/stdio2.h line 210
  • #4 g_vasprintf
    at ../../../../glib/gprintf.c line 316
  • #5 g_strdup_vprintf
    at ../../../../glib/gstrfuncs.c line 514
  • #6 g_strdup_printf
    at ../../../../glib/gstrfuncs.c line 540
  • #7 ephy_sync_crypto_create_assertion
    at ../lib/sync/ephy-sync-crypto.c line 922

Since you're experiencing this only on 32-bit architecture, I bet it's related to the printing format for long unsigned in ephy_sync_crypto_create_assertion(). I think replacing %lu with PRIu64 should fix the problem.
Comment 5 Gabriel Ivașcu 2017-11-06 07:59:07 UTC
Created attachment 363034 [details] [review]
sync-crypto: Use PRIu64 macro to print unsigned longs

Prevent failure for platforms where longs are not 8 bytes.
Comment 6 Gabriel Ivașcu 2017-11-06 08:01:17 UTC
Maybe you can try the above patch and see whether it fixes the crash.
Comment 7 Dan Jacobson 2017-11-06 08:35:38 UTC
Thanks. I'll wait for a .deb .
epiphany-browser:
  Installed: 3.26.1-1
  Candidate: 3.26.1-1
  Version table:
 *** 3.26.1-1 500
        500 http://free.nchc.org.tw/debian unstable/main i386 Packages
Comment 8 Michael Catanzaro 2017-11-06 13:50:34 UTC
We're not going to build a .deb for you to test this.
Comment 9 Michael Catanzaro 2017-11-06 13:54:32 UTC
Review of attachment 363034 [details] [review]:

Yes, this is correct and I'm confident it will fix the crash. Please push to gnome-3-26 as well as master.

Did you look through the rest of the sync code to make sure you haven't made this mistake anywhere else? I don't see any other issues in ephy-sync-crypto.c, but I haven't checked other files.
Comment 10 Gabriel Ivașcu 2017-11-06 13:57:19 UTC
(In reply to Michael Catanzaro from comment #9) 
> Did you look through the rest of the sync code to make sure you haven't made
> this mistake anywhere else? I don't see any other issues in
> ephy-sync-crypto.c, but I haven't checked other files.

Yes, I've checked. This was the only one.
Comment 11 Gabriel Ivașcu 2017-11-06 14:00:09 UTC
Attachment 363034 [details] pushed as 1bde93a - sync-crypto: Use PRIu64 macro to print unsigned longs