sync-crypto: Use PRIu64 macro to print unsigned longs

Prevent failure for platforms where longs are not 8 bytes.

https://bugzilla.gnome.org/show_bug.cgi?id=789656